language/tests/error/ParseError01.sl
toeminto piä() {
  return -1;
}